@@ -82,6 +82,7 @@
      * Use the print mode to report the right print stats row to connect
      * Make sure fan errors send reason, improve their behavior a little
      * READY state changed to IDLE, PREPARED state changed to READY
+     * Added endpoint for set/cancel printer READY state
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
